
	* pygtk-pango-constants.xml Reorganize with a Synopsis and add
	a description for each set of constants.

	* pygtk-gobject-constants.xml Add.

	* pygtk-gobject-gboxed.xml Add.

	* pygtk-gobject-gboxed.xml Remove gobject from Ancestry.

	* pygtk-gobject-gboxed.xml Fix typo.

	* pygtk-gobject-maincontext.xml Add.

	* pygtk-gobject-mainloop.xml Add.

2004-04-25  John Finlay  <finlay@moeraki.com>

	* pygtk-pango-functions.xml Add.

	* pygtk-pangolanguage.xml Add pango functions to cover the real
	API pre-PyGTK 2.4.

	* pygtk-pango-functions.xml Remove extraneous sections.

	* pygtk-gdkscreen.xml ("size-changed") Add description.

	* pygtk-gtk-stock-items.xml (gtk.stock_lookup)
	(gtk.stock_list_ids) Add reference links.

	* pygtk-pango-markup.xml ("fallback") Add description of this
	attribute type.

	* pygtk-pangoattribute.xml Reorder attributes.

	* pygtk-pangofontmap.xml (get_shape_engine_type) Add description.

	* pygtk-gdk-classes.xml Add new xml files for processing.

	* pygtk-gdk-functions.xml Add links to all module functions.

	* pygtk-pango-classes.xml Add class references for FontsetSimple
	and pango functions for processing.

	* pygtk-pango-constants.xml Add.

	* pygtk-pango-classes.xml Add Pango Constants ref.

	* pygtk-gdkgc.xml Fix typo.

	* pygtk-gdkwindow.xml (get_state) Add to WINDOW_STATE flag list.

2004-04-24  John Finlay  <finlay@moeraki.com>

	* pygtk-pangoattribute.xml Fix typo. Reorder attributes.

	* pygtk-pangoattrlist.xml (filter) Add description of this
	PyGTK 2.4 method.

	* pygtk-pangocontext.xml Fix link in Description.

	* pygtk-pangofontface.xml (list_sizes) Add desciption of this
	PyGTK 2,4 method.

	* pygtk-pangofontfamily.xml (is_monospace) Add description of this
	PyGTK 2.4 method.

	* pygtk-pangofontset.xml Fix typo in Description.
	(foreach) Add description of this PyGTK 2.4 method.

	* pygtk-pangofontsetsimple.xml Add.

2004-04-23  John Finlay  <finlay@moeraki.com>

	* pygtk-gdkwindow.xml (set_accept_focus) (get_group)