@@ -9,6 +9,11 @@
 <!-- GOBJECT CLASSES -->
 
 <xi:include href="pygtk-gobject.xml"/>
+<xi:include href="pygtk-gobject-gboxed.xml"/>
+<xi:include href="pygtk-gobject-gpointer.xml"/>
+<xi:include href="pygtk-gobject-maincontext.xml"/>
+<xi:include href="pygtk-gobject-mainloop.xml"/>
 <xi:include href="pygtk-gobject-functions.xml"/>
+<xi:include href="pygtk-gobject-constants.xml"/>
 
 </chapter>
