@@ -19,6 +19,10 @@
 
 	* pygtk-gobject-mainloop.xml Add.
 
+	* pygtk-gobject-classes.xml Add pygtk-gobject-gboxed.xml,
+	pygtk-gobject-maincontext.xml and pygtk-gobject-mainloop.xml to
+	the list of files to be processed.
+
 2004-04-25  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-pango-functions.xml Add.
